--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "prettier": "^3.8.1",
     "sass": "^1.97.3",
+    "terser": "^5.46.0",
     "vite": "^7.3.1",
     "vite-plugin-singlefile": "^2.3.0"
   }
